# lawkit-python

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  examples.py  pyproject.toml  test.py
.github/workflows/: ci.yml  release.yml
python/lawkit/: __init__.py
src/: lib.rs
src/lawkit_python/: __init__.py
tests/: test_law.py  test_unified_api.py
