[package]
name = "lawkit-python"
version = "2.5.16"
edition = "2021"
description = "Python bindings for lawkit - statistical law analysis toolkit"
license = "MIT"
repository = "https://github.com/kako-jun/lawkit"
authors = ["kako-jun"]

[lib]
name = "lawkit_python"
crate-type = ["cdylib"]

[dependencies]
# Core lawkit functionality
lawkit-core = { path = "../lawkit-core" }

# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.0"

[build-dependencies]
pyo3-build-config = "0.22"