[package]
name = "lawkit-python"
version = "2.6.0"
edition = "2021"
description = "Python bindings for lawkit - statistical law analysis toolkit"
license = "MIT"
repository = "https://github.com/kako-jun/lawkit-python"
authors = ["kako-jun"]

[lib]
name = "_lawkit"
crate-type = ["cdylib"]

[dependencies]
# Core lawkit functionality
lawkit-core = "2.5"

# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module", "generate-import-lib"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.0"

[build-dependencies]
pyo3-build-config = "0.22"
