[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lawkit-python"
version = "2.5.16"
description = "Python bindings for lawkit - statistical law analysis toolkit for fraud detection, data quality assessment, and audit compliance. Powered by Rust for blazing fast performance."
readme = "README.md"
license = "MIT"
authors = [
    { name = "kako-jun" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: Utilities"
]
keywords = [
    "statistics",
    "benford",
    "pareto",
    "zipf",
    "normal",
    "poisson",
    "fraud-detection",
    "audit",
    "compliance",
    "data-quality",
    "forensic-accounting",
    "statistical-analysis",
    "pyo3",
    "rust"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/kako-jun/lawkit-python"
Repository = "https://github.com/kako-jun/lawkit-python"
Issues = "https://github.com/kako-jun/lawkit-python/issues"
Documentation = "https://github.com/kako-jun/lawkit-python#readme"

[project.optional-dependencies]
dev = [
    "pytest >= 6.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "ruff"
]

[tool.maturin]
bindings = "pyo3"
find-interpreter = true
compatibility = "manylinux2014"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[dependency-groups]
dev = [
    "maturin>=1.9.1",
    "pytest>=6.0",
    "pre-commit>=3.0",
]
